<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ssil.swin.com.sparrowremote.Fragment.RemoteControlFragment">

    <!-- TODO: Update blank fragment layout -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:text="@string/latitude"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextLatitude"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:enabled="false"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:text="@string/longitude"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextLongitude"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:enabled="false"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:text="@string/altitude"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextAltitude"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:enabled="false"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:text="@string/bearing"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextBearing"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:enabled="false"
            android:inputType="text" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/buttonDisconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:text="@string/disconnect" />

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:text="@string/left" />

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:text="@string/connect" />

        <Button
            android:id="@+id/buttonForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:text="@string/forward" />

        <Button
            android:id="@+id/buttonBackward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:text="@string/backward" />

        <Button
            android:id="@+id/buttonRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:text="@string/right" />

        <Space
            android:layout_column="0"
            android:layout_row="3" />

        <Space
            android:layout_column="1"
            android:layout_row="3" />

        <Space
            android:layout_column="2"
            android:layout_row="3" />

        <Button
            android:id="@+id/buttonRotateLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="5"
            android:text="@string/rotate_left" />

        <Button
            android:id="@+id/buttonRotateRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="5"
            android:text="@string/rotate_right" />

        <Button
            android:id="@+id/buttonUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="6"
            android:text="@string/up" />

        <Button
            android:id="@+id/buttonGoHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="6"
            android:text="@string/gohome" />

        <Button
            android:id="@+id/buttonDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="6"
            android:text="@string/down" />

    </GridLayout>

</LinearLayout>
